name: boltzmann-samplers-examples
version: 0
build-type: Simple
cabal-version: >=1.10

executable aeson-example
  main-is: aeson.hs
  ghc-options: -Wall -fno-warn-partial-type-signatures
  build-depends:
    aeson,
    base,
    boltzmann-samplers,
    unordered-containers,
    QuickCheck,
    scientific,
    text,
    vector
  default-language: Haskell2010

executable functions-example
  main-is: functions.hs
  ghc-options: -Wall
  build-depends:
    base,
    QuickCheck,
    boltzmann-samplers
  default-language: Haskell2010

executable lambda-example
  main-is: lambda.hs
  ghc-options: -Wall
  build-depends:
    base,
    QuickCheck,
    boltzmann-samplers
  default-language: Haskell2010

executable positive-ints-example
  main-is: positive-ints.hs
  ghc-options: -Wall
  build-depends:
    base,
    MonadRandom,
    boltzmann-samplers
  default-language: Haskell2010

executable xml-example
  main-is: xml.hs
  ghc-options: -Wall
  build-depends:
    base,
    QuickCheck,
    quickcheck-instances,
    text,
    xml-conduit,
    boltzmann-samplers
  default-language: Haskell2010
